@@ -12,22 +12,22 @@ import org.onosproject.net.Device;
  */
 public class HCPLLDPTest {
     private Device device;
-    @Test
-    public void HCPLLDPTest() throws Exception{
-        String domainId="111";
-        Long portNumber=new Long(1);
-        DomainId domainId1= DomainId.of(111);
-
-        HCPLLDP hcplldp = HCPLLDP.hcplldp(Long.valueOf("00000000001"),
-                portNumber.intValue(),
-                Long.valueOf(domainId),
-                0xffff);
-        System.out.println(hcplldp.getDpid());
-        System.out.println(hcplldp.getPortNum());
-        System.out.println(hcplldp.getVportNum());
-        System.out.println(hcplldp.getDomianId());
-
-//        System.out.println(Long.valueOf("domainId:              6f".substring("domainId:".length()).replace(" ",""), 16));
-        System.out.println(domainId1.getLong());
-    }
+    //@Test
+//    public void HCPLLDPTest() throws Exception{
+//        String domainId="111";
+//        Long portNumber=new Long(1);
+//        DomainId domainId1= DomainId.of(111);
+//
+//        HCPLLDP hcplldp = HCPLLDP.hcplldp(Long.valueOf("00000000001"),
+//                portNumber.intValue(),
+//                Long.valueOf(domainId),
+//                0xffff);
+//        System.out.println(hcplldp.getDpid());
+//        System.out.println(hcplldp.getPortNum());
+//        System.out.println(hcplldp.getVportNum());
+//        System.out.println(hcplldp.getDomianId());
+//
+////        System.out.println(Long.valueOf("domainId:              6f".substring("domainId:".length()).replace(" ",""), 16));
+//        System.out.println(domainId1.getLong());
+//    }
 }
